grafana-prometheus/prometheus/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: gf-space
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        podinfo: "Prometheus"
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #           - key: kubernetes.io/hostname
      #             operator: In
      #             values:
      #               - "k8s-worker-2"
      serviceAccountName: prometheus
      serviceAccount: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v3.2.1
          #image: prom/prometheus:v2.48.1
          imagePullPolicy: IfNotPresent
          #/bin/prometheus
          #-config.file=/etc/prometheus/prometheus.yml
          #-storage.tsdb.path=/prometheus
          #-web.console.libraries=/usr/share/prometheus/console_libraries
          #-web.console.templates=/usr/share/prometheus/consoles
          command:
            - /bin/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus/consoles"
            - "--storage.tsdb.retention.time=4d"  #保存期間
            - "--storage.tsdb.min-block-duration=1h"  #ブロック書き出しタイミング時間
            - "--storage.tsdb.max-block-duration=12h" #
          # args: [
          #   "--config.file=/etc/prometheus/prometheus.yml",
          #   "--storage.tsdb.path=/prometheus",
          #   # "",
          #   # "",
          #   "--web"
          #   ]

          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 400m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
          volumeMounts:
            - name: config-vol
              mountPath: /etc/prometheus/prometheus.yml
              # mountPath: /prometheus/prometheus.yml
              subPath: prometheus.yml
            - name: prometheus-vol
              mountPath: /prometheus
      volumes:
        - name: config-vol
          configMap:
            name: prometheus-configmap
            items:
              - key: prometheus.yml
                path: prometheus.yml
        - name: prometheus-vol
          # persistentVolumeClaim:
          #   claimName: prometheus-pv-claim
          emptyDir:
            {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: gf-space
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
  # type: LoadBalancer
  type: ClusterIP
---
